cmake_minimum_required(VERSION 3.31)
project(lession1_2_3 C)

set(CMAKE_C_STANDARD 11)

add_executable(lession1_2_3 PTIT_CNTT1_IT103_Session01_Bai01+02+03.c
        PTIT_CNTT1_IT201_Session01_Bai04.c
        PTIT_CNTT1_IT201_Session01_Bai05.c
        PTIT_CNTT1_IT201_Session01_Bai06.c
        PTIT_CNTT1_IT201_Session01_Bai07.c
        PTIT_CNTT1_IT201_Session01_Bai08.c)
